[gd_scene load_steps=2 format=3 uid="uid://m4swj58uli2e"]

[ext_resource type="Script" path="res://main.gd" id="1_7kike"]

[node name="Main" type="Node2D"]
script = ExtResource("1_7kike")

[node name="GridContainer" type="GridContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
columns = 4
metadata/_edit_use_anchors_ = true

[node name="GameTimer" type="Timer" parent="."]

[node name="TimerLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="PointsLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
